flexoffice-test/backend/authentication/authentication-middle.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
  namespace: flex-test-authentication
spec:
  redirectScheme:
    scheme: https
    permanent: true
