flexoffice-test/backend/authentication/authentication-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flex-test-app-authentication
  namespace: flex-test-authentication
  labels:
    app: flex-test-authentication
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: flex-test-authentication
  replicas: 1
  template:
    metadata:
      labels:
        app: flex-test-authentication
    spec:
      imagePullSecrets:
      - name: github-secret
      containers:
      - name: flexoffice-authentication
        image: ghcr.io/jonastschumi/flexoffice_authentication:p0.0.37
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
