flexoffice-test/backend/authentication/authentication-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flex-test-postgres-authentication
  namespace: flex-test-authentication
spec:
  selector:
    app: flex-test-postgres-authentication
  type: ClusterIP
  ports:
    - name: http
      port: 5432
